# SSG

./: CMakeLists.txt  SSG.pc.in
src/: CMakeLists.txt  DThread.hpp  Executor.cpp  Executor.hpp  ExecutorDef.hpp  IObserver.cpp  IObserver.hpp  IResult.hpp  ISubject.cpp  ISubject.hpp  ITask.hpp  IThread.hpp  JThread.hpp  Message.cpp  Message.hpp  TypeDefinition.hpp
test/: CMakeLists.txt  main.cpp
